[package]
name = "pbkdf2_cracker"
version = "1.0.0"
edition = "2021"
authors = ["CTF Security Team"]
description = "Production-grade PBKDF2-SHA256 password cracker for Flask/Werkzeug hashes"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
hex = "0.4"
rayon = "1.10"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
